--- a/style.css
+++ b/style.css
@@ -444,3 +444,60 @@ nav {
   padding: 10px 0 20px;
   font-style: 13px;
 }
+
+.settings-menu {
+  position: absolute;
+  width: 90%;
+  max-width: 350px;
+  /* height: 500px; */
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
+  overflow: hidden;
+  top: 108%;
+  right: 5%;
+  max-height: 0;
+  transition: all 0.2s;
+}
+
+.settings-menu-height {
+  max-height: 450px;
+}
+
+.user-profile a {
+  font-size: 12px;
+  color: #1876f2;
+  text-decoration: none;
+}
+
+.settings-menu-inner {
+  padding: 20px;
+}
+
+.settings-menu hr {
+  border: 0;
+  height: 1px;
+  background-color: #9a9a9a;
+  margin: 15px 0;
+}
+
+.setting-links {
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.setting-links .settings-icon {
+  width: 38px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.setting-links a {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  color: #1876f2;
+}
