--- a/style.css
+++ b/style.css
@@ -5,15 +5,28 @@
   box-sizing: border-box;
 }
 
+:root {
+  --body-color: #efefef;
+  --nav-color: #1876f2;
+  --bg-color: #fff;
+}
+
+.dark-theme {
+  --body-color: #0a0a0a;
+  --nav-color: #000;
+  --bg-color: #000;
+}
+
 body {
-  background-color: #efefef;
+  background-color: var(--body-color);
+  transition: background-color 0.3s;
 }
 
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #1876f2;
+  background-color: var(--nav-color);
   padding: 5px 5%;
   position: sticky;
   top: 0;
@@ -101,7 +114,7 @@ nav {
 }
 
 .right-sidebar {
-  background-color: white;
+  background-color: var(--bg-color);
   padding: 20px;
   border-radius: 4px;
   color: #626262;
@@ -301,7 +314,7 @@ nav {
 
 .write-post-container {
   width: 100%;
-  background: #fff;
+  background: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
@@ -362,7 +375,7 @@ nav {
 
 .post-container {
   width: 100%;
-  background-color: #fff;
+  background-color: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
@@ -450,7 +463,7 @@ nav {
   width: 90%;
   max-width: 350px;
   /* height: 500px; */
-  background: #fff;
+  background: var(--bg-color);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   border-radius: 4px;
   overflow: hidden;
@@ -500,4 +513,31 @@ nav {
   justify-content: space-between;
   text-decoration: none;
   color: #1876f2;
+}
+
+#dark-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: #ccc;
+  width: 45px;
+  border-radius: 15px;
+  padding: 2px 3px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  transition: padding-left 0.5s, background-color 0.5s;
+}
+
+#dark-btn span {
+  width: 18px;
+  height: 18px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+#dark-btn.dark-btn-on {
+  padding-left: 23px;
+  background-color: #0a0a0a;
 }
