--- a/style.css
+++ b/style.css
@@ -741,3 +741,100 @@ nav {
   margin-top: 5px;
   font-size: 14px;
 }
+
+/* ------------- media query for home page ------------- */
+
+@media (max-width: 900px) {
+  .right-sidebar {
+    display: none;
+  }
+  .left-sidebar {
+    display: none;
+  }
+  nav {
+    flex-wrap: wrap;
+  }
+  .search-box {
+    display: none;
+  }
+  .logo {
+    width: 110px;
+    margin-right: 20px;
+  }
+  .nav-left ul li img {
+    width: 20px;
+    margin: 0 8px;
+  }
+
+  .nav-user-icon img {
+    width: 30px;
+  }
+  .nav-user-icon {
+    margin-left: 0;
+  }
+
+  .add-post-links {
+    flex-wrap: wrap;
+  }
+
+  .main-content {
+    flex-basis: 100%;
+  }
+
+  .story img {
+    width: 20px;
+    border-width: 3px;
+  }
+
+  .story p {
+    font-size: 10px;
+  }
+
+  .story.story1 img {
+    width: 25px;
+    bottom: 30px;
+  }
+
+  .add-post-links a {
+    margin-right: 12px;
+    font-size: 11px;
+  }
+
+  .add-post-links a img {
+    width: 16px;
+    margin-right: 5px;
+  }
+  .post-input-container {
+    padding-left: 0;
+  }
+}
+
+/* --------------- media query for profile page --------------- */
+@media (max-width: 900px) {
+  .profile-container {
+    padding: 20px 5%;
+  }
+  .profile-details {
+    flex-wrap: wrap;
+  }
+
+  .pd-right {
+    text-align: left;
+    margin-top: 15px;
+  }
+  .pd-right button {
+    margin-left: 0;
+    margin-right: 10px;
+  }
+
+  .pd-row div h3 {
+    font-size: 16px;
+  }
+  .profile-info {
+    flex-wrap: wrap;
+  }
+  .info-col,
+  .post-col {
+    flex-basis: 100%;
+  }
+}
